test/error/iface/err3.rzy

Err3 = Composition
  funcA : response():Boolean;
end

